--- a/so-20-21-ex1_base/Makefile
+++ b/so-20-21-ex1_base/Makefile
@@ -12,13 +12,16 @@ LDFLAGS=-lm -pthread
 
 all: tecnicofs
 
-tecnicofs: fs/state.o fs/operations.o main.o
-	$(LD) $(CFLAGS) $(LDFLAGS) -o tecnicofs fs/state.o fs/operations.o main.o
+tecnicofs: fs/state.o fs/operations.o synch.o main.o
+	$(LD) $(CFLAGS) $(LDFLAGS) -o tecnicofs fs/state.o fs/operations.o synch.o main.o
 
-fs/state.o: fs/state.c fs/state.h tecnicofs-api-constants.h
+synch.o: synch.c synch.h
+	$(CC) $(CFLAGS) -o synch.o -c synch.c
+
+fs/state.o: fs/state.c fs/state.h tecnicofs-api-constants.h synch.h
 	$(CC) $(CFLAGS) -o fs/state.o -c fs/state.c
 
-fs/operations.o: fs/operations.c fs/operations.h fs/state.h tecnicofs-api-constants.h
+fs/operations.o: fs/operations.c fs/operations.h fs/state.h tecnicofs-api-constants.h 
 	$(CC) $(CFLAGS) -o fs/operations.o -c fs/operations.c
 
 main.o: main.c fs/operations.h fs/state.h tecnicofs-api-constants.h
