--- a/so-20-21-ex3_base/so-20-21-ex3_base/client/Makefile
+++ b/so-20-21-ex3_base/so-20-21-ex3_base/client/Makefile
@@ -3,7 +3,7 @@
 
 CC   = gcc
 LD   = gcc
-CFLAGS =-pthread -Wall -std=gnu99 -I../
+CFLAGS =-pthread -Wall -std=gnu99 -g -I../
 LDFLAGS=-lm -lpthread
 
 # A phony target is one that is not really the name of a file
